--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.18.3",
     "axios": "^1.7.2",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
